--- a/index.html
+++ b/index.html
@@ -3,86 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmoblandoMuebles</title>
+    <title>Amoblando Muebles</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Amoblando Muebles</h1>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#productos">Productos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+            <div class="container">
+                <a class="navbar-brand" href="#">Amoblando Muebles</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#reseñas">Reseñas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="carrito-icono" class="carrito-icono" onclick="toggleCarrito()">
+                <img src="img/carrito.png" alt="Carrito" />
+                <span id="carrito-count">0</span>
+            </div>
         </nav>
     </header>
     <main>
         <section id="productos">
             <h2>Productos</h2>
-            <div class="cards">
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/182713946/es/foto/d%C3%A9cada-de-los-muebles-de-%C3%A9poca-curva-de-comedor-de-madera-aislada-sobre-blanco-silla.jpg?s=612x612&w=gi&k=20&c=GC2RTj6TBWJWuRtK6zCZG2tQJVEg3yC7g-dooc3q-lY=" alt="Silla verde">
-                    <h3>Silla color verde</h3>
-                    <p>Silla de color verde ideal comedor.</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/154926620/es/foto/sill%C3%B3n.jpg?s=612x612&w=gi&k=20&c=wria9WKWr7ab7klvSop8okk7C0Em01h0qequKA0h8Zg=" alt="Sillon turquesa">
-                    <h3>Sillon Turquesa</h3>
-                    <p>Hermoso sillón de color turquesa.</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/748341581/es/foto/man-and-woman-sitting-on-chairs-talking.jpg?s=612x612&w=gi&k=20&c=ByJESKBERh-sOlAQObXC6KhHQPmhe0cA4uYH9tuM1yA=" alt="Sillon azul">
-                    <h3>Sillón color azul</h3>
-                    <p>Sillón de color azul, personas no vienen con el sillón.</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/133713503/es/foto/blanco-3d-bar-silla.jpg?s=612x612&w=gi&k=20&c=c7wNTzInd_MytgyvB5L2oUmdOFa5Tfi0sMQnAZp-XQk=" alt="Banqueta blanca">
-                    <h3>Banqueda blanca por unidad</h3>
-                    <p>Banqueta de color blanco, alto pero no mucho.</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/182776941/es/foto/armario-un-tocador-de-madera-r%C3%BAstica-muebles-con-cajones-aislado-en-blanco.jpg?s=612x612&w=gi&k=20&c=l751A1NPMnDZMfHv6LT3i93b3Kz-hiS1aa0EGwoCVLw=" alt="Cajonera de madera">
-                    <h3>Cajonera de madera rustica</h3>
-                    <p>Cajonera de madera natural de muy buena calidad.</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="card">
-                    <img src="https://media.gettyimages.com/id/155429759/es/foto/sunbead-de-madera-sobre-fondo-blanco.jpg?s=612x612&w=gi&k=20&c=tNKytlI0lYUPhei6w-41QZPQ90djB4nslJQPD1T3F0A=" alt="Reposera">
-                    <h3>Reposera de madera</h3>
-                    <p>Reposera ideal para piscina, de madera duradera.</p>
-                    <button>Añadir al carrito</button>
-                </div>
+            <div id="product-list" class="cards"></div>
+        </section>        
+        <section id="carrito" style="display: none;">
+            <h2>Carrito de Compras</h2>
+            <div id="carrito-container">
             </div>
+            <button onclick="vaciarCarrito()">Vaciar Carrito</button>
         </section>
+
+        <section id="carrito-sidebar" class="carrito-sidebar">
+            <h2>Carrito</h2>
+            <div id="carrito-container"></div>
+            <button onclick="vaciarCarrito()">Vaciar Carrito</button>
+            <button onclick="closeSidebar()">Cerrar</button>
+        </section>
+        
         <section id="reseñas">
             <h2>Reseñas</h2>
-            <div class="reseñas-grid">
-                <div class="reseña">
-                    <h4>Homero Simpson</h4>
-                    <p>"El único libro que yo leí en mi vida fue Matar un ruiseñor. ¡Y no me dio ninguna información sobre cómo matar ruiseñores! Y menos como juzgar un mueble!! Sí, es cierto que me enseñó a no juzgar a un hombre por el color de su piel, ¿pero eso para qué me sirve?"</p>
-                </div>
-                <div class="reseña">
-                    <h4>Moe Szyslak</h4>
-                    <p>"Bienvenidos a la reseña 411, cada vez que un rufian critique tu futón haras esto: *pasos epicos, japish de escopeta*."</p>
-                </div>
-                <div class="reseña">
-                    <h4>Edna Krabappel</h4>
-                    <p>"Debo reseñarte. Cuánto puntaje daré? Aún no lo decido. Cuántas reseñas dejaré? No puedo decirlo. Pero puedo decirte algo... cada vez que sople el viento, susurrará tu precio 50% OFF."</p>
-                </div>
-                <div class="reseña">
-                    <h4>Jefe Górgory</h4>
-                    <p>"Si estas leyendo esta reseña es porque tienes mucho tiempo, o muy poco."</p>
-                </div>
+            <div class="cards" id="reseñas-container">
             </div>
         </section>
         <section id="contacto">
             <h2>Contacto</h2>
+            <!-- formspree user: amoblando.muebles.web@yopmail.com / QAtest1234!! -->
             <form action="https://formspree.io/f/mbljlpaj" method="POST">
                 <div class="form-group">
                     <input type="text" id="nombre" name="nombre" required>
@@ -104,7 +80,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Amoblando Muebles marca registrada</p>
+        <p>&copy; 2024 Amoblando Muebles - Todos los derechos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
